fix genre list overflowing

--- a/src/pages/detail/style.scss
+++ b/src/pages/detail/style.scss
@@ -67,6 +67,7 @@
       ul {
         flex-direction: row;
         align-items: flex-start;
+        flex-wrap: wrap;
       }
       li {
         padding: metrics.spacing(1);
